unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/csmrgp__Potential_Duplicate__c.object-meta.xml
<CustomObject>
    <label>Potential Duplicate</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Potential Duplicate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Duplicates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>