unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Automerge_Detected__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerge_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the child case has been detected as a duplicate by automerge.</description>
    <label>Automerge Detected</label>
    <type>Checkbox</type>
</CustomField>