unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Automerge_Indicated__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerge_Indicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the child case has been detected as a duplicate by automerge and can be automerged from the Duplicate Detector Lighting Component.</description>
    <label>Automerge Indicated</label>
    <type>Checkbox</type>
</CustomField>