unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Child_Case__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Child_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Potential Duplicates (Child Case)</relationshipLabel>
    <relationshipName>Potential_Duplicates1</relationshipName>
    <type>Lookup</type>
</CustomField>