unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Child_Case_Field_Values_2__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Child_Case_Field_Values_2__c</fullName>
    <description>Extension of Child_Case_Field_Values__c.</description>
    <label>Child Case Field Values 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>