unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Field_Comparisons__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Field_Comparisons__c</fullName>
    <label>Field Comparisons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>