unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Potential Duplicates</relationshipLabel>
    <relationshipName>Potential_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>