unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Parent_Case_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Parent_Case_Field_Values__c</fullName>
    <description>JSON representing values for fields on the parent case at the time the Potential Duplicate record was created.</description>
    <label>Parent Case Field Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>