unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Related_Records_2__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Related_Records_2__c</fullName>
    <description>Extension of Related_Records__c.</description>
    <label>Related Records 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>