unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Related_Records__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Related_Records__c</fullName>
    <description>Set during a merge. Populated with related records ids that were merged. Stores the original id, the new record id (if applicable), the id of the original case, and whether or not the original record was deleted.</description>
    <label>Related Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>