unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Source__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Source__c</fullName>
    <description>Denotes the origin of this record.

Duplicate Detector - record was created via a dismissal in the Case Merge Premium lightning component.
Merge - record was created during a merge.
Duplicate Case Utility Bar - record was created by the Duplicate Case Utility Bar component.
Automerge - record was created by an automerge or when an automerge was detected.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Detector</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Duplicate Case Utility Bar</fullName>
            </value>
            <value>
                <fullName>Automerge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>