unpackaged/main/default/objects/csmrgp__Potential_Duplicate__c/fields/csmrgp__Unmerged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Unmerged_Date_Time__c</fullName>
    <description>The time at which the Child Case of this Potential Duplicate was unmerged.</description>
    <label>Unmerged Date Time</label>
    <type>DateTime</type>
</CustomField>